prevented a gap between two element

--- a/static/styles/css/style.css
+++ b/static/styles/css/style.css
@@ -109,7 +109,7 @@ a {
 }
 .parent .mainSidebar .mainSvg {
   background-color: #A2B6B8;
-  grid-row: 1/2;
+  vertical-align: middle;
 }
 .parent .mainSidebar .about-project {
   margin-top: auto;
