--- a/static/styles/scss/components/_main.scss
+++ b/static/styles/scss/components/_main.scss
@@ -24,7 +24,7 @@
             }
             .mainSvg{
                 background-color: #A2B6B8;
-                grid-row: 1 / 2;
+                vertical-align: middle;
             }
             .about-project{
                 margin-top: auto;
